<resources>
    <string name="_587">587</string>
    <string name="_7500">7500</string>
    <string name="_993">993</string>
    <string name="accounts">Accounts</string>
    <string name="address">Address</string>
    <string name="all_confidential_data_will_be_erased">All confidential data will be erased!</string>
    <string name="app_name">Lettera</string>
    <string name="apply">Apply</string>
    <string name="back">Back</string>
    <string name="bottom">Bottom</string>
    <string name="close">Close</string>
    <string name="color_theme">Color Theme</string>
    <string name="delete">Delete</string>
    <string name="delete_on_server">Delete on Server</string>
    <string name="digest">Digest</string>
    <string name="display">Display</string>
    <string name="e_mail">E-Mail</string>
    <string name="e_mail_folders">E-Mail Folders</string>
    <string name="email_email_org">e-mail@e-mail.org</string>
    <string name="encryption_key">Encryption Key</string>
    <string name="folders">Folders</string>
    <string name="generate">Generate</string>
    <string name="icon_theme">Icon Theme</string>
    <string name="inbound_imaps_server">Inbound IMAPS Server</string>
    <string name="inbox">Inbox</string>
    <string name="interrupt">Interrupt</string>
    <string name="items">Items</string>
    <string name="iteration_count">Iteration Count</string>
    <string name="lettera">Lettera</string>
    <string name="like_inbound">Like Inbound</string>
    <string name="move_to">Move to:</string>
    <string name="name">Name</string>
    <string name="network">Network</string>
    <string name="notes">Notes</string>
    <string name="outbound_smtps_server">Outbound SMTPS Server</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="primary_account">Primary Account</string>
    <string name="privacy">Privacy</string>
    <string name="proxy">Proxy</string>
    <string name="query_interval">Query Interval (Milliseconds)</string>
    <string name="remove_local_folders_messages">Remove Local Content</string>
    <string name="save">Save</string>
    <string name="save_password">Save Password</string>
    <string name="select_image">Select image.</string>
    <string name="show_a_vertical_separator_before_the_settings_icon">Show a vertical separator before the Settings icon.</string>
    <string name="show_status_bar_on_main_activity">Show status bar on main activity.</string>
    <string name="signature_key">Signature Key</string>
    <string name="telephone">Telephone</string>
    <string name="test">Test</string>
    <string name="todo">TODO</string>
    <string name="top">Top</string>
    <string name="type">Type</string>
    <string name="user">User</string>
    <string name="oauth">OAuth</string>
</resources>
